--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "bootstrap": "^5.1.3",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-bootstrap": "^2.3.1",
