--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@prisma/client": "3.14.0",
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.8",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
+    "prisma": "^3.14.0",
     "react": "18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "18.1.0"
