--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "joi": "^17.6.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
+    "next-joi": "^2.2.1",
     "prisma": "^3.14.0",
     "react": "18.1.0",
     "react-bootstrap": "^2.3.1",
