--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
+    "cheerio": "^1.0.0-rc.11",
     "joi": "^17.6.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
