--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.6",
     "next-joi": "^2.2.1",
+    "nprogress": "^0.2.0",
     "prisma": "^3.14.0",
     "react": "18.1.0",
     "react-bootstrap": "^2.3.1",
