--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.8",
+    "axios": "^1.10.0",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "cheerio": "^1.0.0-rc.11",
