fix: vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "functions": {
-    "api/**/*.ts": {
-      "regions": ["sin1"]
+    "api/binance/ticker/price.ts": {
+      "memory": 128,
+      "maxDuration": 10,
+      "region": "sin1"
     }
   }
 }
