--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/jsonwebtoken": "^8.5.8",
     "axios": "^1.10.0",
     "bcrypt": "^5.0.1",
+    "binance-api-node": "^0.12.9",
     "bootstrap": "^5.1.3",
     "cheerio": "^1.0.0-rc.11",
+    "dayjs": "^1.11.18",
     "joi": "^17.6.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -30,14 +32,15 @@
     "prisma": "^3.14.0",
     "react": "18.1.0",
     "react-bootstrap": "^2.3.1",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@types/node": "^17.0.31",
+    "@types/node": "^24.3.0",
     "@types/react": "^18.0.9",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "typescript": "^4.6.4"
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": "20.x"
