--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/react-dom": "^19.2.3",
     "axios": "^1.10.0",
     "bcrypt": "^5.0.1",
     "binance-api-node": "^0.12.9",
@@ -35,11 +36,12 @@
     "react": "18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "18.1.0",
+    "react-icons": "^5.5.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
-    "@types/react": "^18.0.9",
+    "@types/react": "^19.2.7",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "^5.9.2"
