--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@prisma/client": "^3.14.0",
+    "@react-aria/ssr": "^3.9.10",
+    "@react-aria/utils": "^3.32.0",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@types/axios": "^0.14.0",
