--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-aria/utils": "^3.32.0",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
+    "@tinymce/tinymce-react": "^6.3.0",
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.8",
