--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "@prisma/client": "^3.14.0",
     "@react-aria/ssr": "^3.9.10",
     "@react-aria/utils": "^3.32.0",
@@ -21,7 +21,7 @@
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/react-dom": "^19.2.3",
+    "@types/react-dom": "18.2.0",
     "axios": "^1.10.0",
     "bcrypt": "^5.0.1",
     "binance-api-node": "^0.12.9",
@@ -36,20 +36,24 @@
     "next-joi": "^2.2.1",
     "nprogress": "^0.2.0",
     "prisma": "^3.14.0",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-bootstrap": "^2.3.1",
-    "react-dom": "18.1.0",
-    "react-icons": "^5.5.0",
+    "react-dom": "18.2.0",
+    "react-icons": "4.12.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
-    "@types/react": "^19.2.7",
+    "@types/react": "18.2.0",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "typescript": "^5.9.2"
+    "typescript": "5.3.3"
   },
   "engines": {
     "node": "20.x"
+  },
+  "resolutions": {
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0"
   }
 }
